syntax = "proto3";

package name.nkonev.videochat;

option java_multiple_files = true;

message UserDto {
    int64 id = 1;
    string login = 2;
    string avatar = 3;
}

message UsersRequest {
    repeated int64 userIds = 1;
}

message UsersResponse {
    repeated UserDto users = 1;
}
